# corticalfields

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
corticalfields/: datasets.py  distance_stats.py  functional_maps.py  hippocampus.py  pointcloud.py  spectral.py  transport.py  viz_subcortical.py
corticalfields/analysis/: bayesian.py  eda_qc.py  normative.py
corticalfields/pointcloud/: spectral.py  viz.py
corticalfields/pointcloud/deep/: __init__.py
corticalfields/viz/: graph_viz.py  subcortical.py
env/: Dockerfile.brainnet  README.md  conda_brainnet.yml  setup_env.sh
examples/: covid_practical_tutorial.py
examples/examples/: plot_hks_surface.py
examples/pipelines/: guided_pipeline.py  mtle_pipeline.py
examples/tutorial/: tutorial_decoup_lbg1_sarscov2.py
info/: cepesc_laterality_template.csv  ds000221_subjects_template.txt
info/atlases/: labels_aal3.csv  labels_schaefer100.txt  labels_schaefer_100_7networks.csv  labels_schaefer_400_7networks.csv  labels_synthseg.txt  synthseg_mni_mapping.json  synthseg_mni_volumes.csv
opt/atlases/: labels_aa3.txt  labels_brainnetome.csv  labels_schaefer_200_7networks.csv  synthseg_mni_labels.tsv  synthseg_mni_qc.csv
opt/scripts/: extract_lateralized_thickness.sh  extract_schaefer200_cepesc_hads.py
res/markdown/: BrainNet viability as a Python backend for cortical reconstruction.md  Building brainplots.py_ a complete API reference for cortical visualization in Python.md  Cortical Surface Selection and EDA Strategies for Spectral Neuroimaging Pipelines in MTLE-HS Cohorts.md  Fast PyMC 5 sampling.md  FastSurfer vs FreeSurfer concordance_ what the evidence says.md  FreeSurfer-free cortical point clouds from T1w MRI.md  Functional Maps and Optimal Transport for Cortical Asymmetry.md
res/pptx/: CorticalFields_ an Introduction.pptx
research/: Cortical thickness vs Yeo-7 network analysis_ a complete pipeline guide.md  CorticalFields_ a genuinely novel library at the intersection of five underexploited gaps.md  GPU-accelerating sparse Laplace-Beltrami eigensolvers for cortical surfaces.md
scripts/: annot_schaefer200_multidataset.py  extract_schaefer200_ds000221.py  generate_bayesian_schematics.py
src/corticalfields/: __init__.py  asymmetry.py  backends.py  bayes_viz.py  bayesian.py  brainplots.py  distance_stats.py  eda_qc.py  features.py  functional_maps.py  graphs.py  hippocampus.py  kernels.py  normative.py  pointcloud.py  spectral.py  subcortical.py  surface.py  surprise.py  transport.py  utils.py  viz.py
src/corticalfields/analysis/: __init__.py  eda_qc.py  stats.py
src/corticalfields/pointcloud/: __init__.py  functional_maps.py  morphometrics.py  registration.py  t1w_pipeline.py  transport.py  viz.py
src/corticalfields/pointcloud/deep/: diffusion_net.py  egnn.py
src/corticalfields/viz/: __init__.py  bayes.py  brainplots.py
tests/: test_core.py
tutorials/: README.md
tutorials/jupyter/: 01_installation_surface_io.ipynb  02_spectral_decomposition.ipynb  03_spectral_descriptors.ipynb  04_freesurfer_free_pipeline.ipynb  05_subcortical_surfaces.ipynb  06_functional_maps_asymmetry.ipynb  07_optimal_transport.ipynb  08_normative_modeling_surprise.ipynb  09_networks_statistics.ipynb  10_publication_figures_bayesian.ipynb
tutorials/marimo/: 01_installation_surface_io_marimo.py  02_spectral_decomposition_marimo.py  03_spectral_descriptors_marimo.py  04_freesurfer_free_pipeline_marimo.py  05_subcortical_surfaces_marimo.py  06_functional_maps_asymmetry_marimo.py  07_optimal_transport_marimo.py  08_normative_modeling_surprise_marimo.py  09_networks_statistics_marimo.py  10_publication_figures_bayesian_marimo.py
tutorials/percent_scripts/: 01_installation_surface_io.py  02_spectral_decomposition.py  03_spectral_descriptors.py  04_freesurfer_free_pipeline.py  05_subcortical_surfaces.py  06_functional_maps_asymmetry.py  07_optimal_transport.py  08_normative_modeling_surprise.py  09_networks_statistics.py  10_publication_figures_bayesian.py
