[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "corticalfields"
version = "0.2.0"
description = "Spectral cortical and subcortical analysis on meshes and point clouds — Laplace-Beltrami decomposition, atlas-free asymmetry, GPU-accelerated optimal transport, hippocampal subfield analysis (HippUnfold), ShapeDNA/BrainPrint spectral fingerprinting, geometric deep learning, Bayesian inference, and normative modeling for structural neuroimaging."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "rdneuro", email = "r.debona@ufrj.br"},
]
keywords = [
    "neuroimaging", "cortical-surface", "point-cloud",
    "gaussian-process", "normative-modeling", "epilepsy",
    "heat-kernel-signature", "laplace-beltrami", "surprise-maps",
    "spectral-analysis", "functional-maps", "optimal-transport",
    "bayesian-inference", "horseshoe-prior", "pymc",
    "geometric-deep-learning", "diffusionnet", "equivariant",
    "hippocampus", "hippunfold", "subcortical", "shape-analysis",
    "mtle-hs", "temporal-lobe-epilepsy", "shapedna", "brainprint",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

# ── Core dependencies (always installed) ────────────────────────────────
# These are required for the spectral analysis pipeline (surface I/O,
# Laplace-Beltrami, HKS/WKS/GPS, GP kernels, normative modeling).
# Note: pymc is NOT a core dep — it's in [bayesian] below.
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "nibabel>=5.0",
    "torch>=2.0",
    "gpytorch>=1.11",
    "scikit-sparse>=0.4",
    "trimesh>=4.0",
    "pyvista>=0.42",
    "matplotlib>=3.7",
    "tqdm>=4.65",
    "joblib>=1.3",
    "pandas>=2.0",
]

# ── Optional dependency groups ──────────────────────────────────────────
#
# Install what you need:
#
#   pip install corticalfields                     # core spectral pipeline
#   pip install corticalfields[pointcloud]         # + point cloud LBO + morphometrics
#   pip install corticalfields[pointcloud-dl]      # + DiffusionNet, EGNN, PyG
#   pip install corticalfields[pointcloud-ot]      # + GPU Sinkhorn (GeomLoss)
#   pip install corticalfields[all-pointcloud]     # all point cloud extras
#   pip install corticalfields[bayesian]           # + Bayesian analysis
#   pip install corticalfields[bayesian-fast]      # + nutpie (fastest CPU sampler)
#   pip install corticalfields[bayesian-gpu]       # + numpyro/blackjax (GPU)
#   pip install corticalfields[viz]                # + brain surface viz
#   pip install corticalfields[all]                # everything

[project.optional-dependencies]

# ── Point cloud processing ──────────────────────────────────────────────
# Lightweight: LBO on point clouds + morphometrics + Open3D
pointcloud = [
    "robust-laplacian>=0.2.4",
    "open3d>=0.18",
    "potpourri3d>=0.0.8",
]

# Deep learning on point clouds: DiffusionNet, EGNN, PyG
pointcloud-dl = [
    "corticalfields[pointcloud]",
    "torch-geometric>=2.4",
]

# GPU-accelerated optimal transport on point clouds
pointcloud-ot = [
    "corticalfields[pointcloud]",
    "POT>=0.9",
    "geomloss>=0.2",
]

# Point cloud registration (CPD, BCPD)
pointcloud-reg = [
    "corticalfields[pointcloud]",
    "pycpd>=2.0",
]

# All point cloud extras
all-pointcloud = [
    "corticalfields[pointcloud]",
    "corticalfields[pointcloud-dl]",
    "corticalfields[pointcloud-ot]",
    "corticalfields[pointcloud-reg]",
]

# ── Bayesian analysis ───────────────────────────────────────────────────
# PyMC + ArViz + PreLiz + PgmPy + Bambi
bayesian = [
    "pymc>=5.10",
    "arviz>=0.15",
    "preliz==0.17",
    "pgmpy>=0.1.25",
    "bambi>=0.13",
    "pymc-extras>=0.1",
    "seaborn>=0.13",
]

# Bayesian + nutpie (fastest CPU sampler, ~2x speedup)
bayesian-fast = [
    "corticalfields[bayesian]",
    "nutpie>=0.9",
]

# Bayesian + JAX GPU samplers
bayesian-gpu = [
    "corticalfields[bayesian]",
    "numpyro>=0.14",
    "blackjax>=1.0",
    "jax[cuda13]>=0.4",
]

bayesian-all = [
    "corticalfields[bayesian]",
    "corticalfields[bayesian-gpu]",
    "corticalfields[bayesian-fast]",
]

# ── LaPy backend ────────────────────────────────────────────────────────
lapy = [
    "lapy>=1.0",
]

lapy-fast = [
    "lapy[chol]>=1.0",
]

# ── Misc GPU / graph backends ───────────────────────────────────────────
igraph = [
    "igraph>=0.10",
]

cuda = [
    "cupy-cuda13x",
]

# ── Hippocampal analysis ─────────────────────────────────────────────────
hippocampus = [
    "corticalfields[viz]",
    "brainspace>=0.1",
]

# ── Subcortical shape analysis ──────────────────────────────────────────
subcortical = [
    "corticalfields[pointcloud]",
    "corticalfields[pointcloud-ot]",
]

# ── Tutorials (synthetic clinical data + statistical testing) ───────────
tutorials = [
    "pandas>=2.0",
    "seaborn>=0.13",
]

# ── Visualization ───────────────────────────────────────────────────────
viz = [
    "surfplot>=0.2",
    "brainspace>=0.1",
    "neuromaps>=0.0.4",
]

# ── Full spectral pipeline extras (no GPU, no Bayesian) ────────────────
spectral-full = [
    "robust-laplacian>=0.2",
    "corticalfields[lapy-fast]",
    "corticalfields[igraph]",
    "potpourri3d>=0.0.8",
    "geometric-kernels>=0.2",
]

# ── Everything ──────────────────────────────────────────────────────────
all = [
    "corticalfields[spectral-full]",
    "corticalfields[all-pointcloud]",
    "corticalfields[bayesian-all]",
    "corticalfields[cuda]",
    "corticalfields[viz]",
    "corticalfields[lapy-fast]",
    "corticalfields[igraph]",
    "corticalfields[hippocampus]",
    "corticalfields[subcortical]",
    "corticalfields[tutorials]",
]

# ── Development ─────────────────────────────────────────────────────────
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/rdneuro/corticalfields"
Documentation = "https://corticalfields.readthedocs.io"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py39"
